extracted 2D point class to own header and implemented a basic bezier rendering algorithm (possibly not working correctly)

--- a/MSVC/DrawingAlgorithms/DrawingAlgorithms.vcxproj
+++ b/MSVC/DrawingAlgorithms/DrawingAlgorithms.vcxproj
@@ -99,10 +99,12 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Point2D.cpp" />
     <ClCompile Include="src\DrawingAlgoApp.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Point2D.h" />
     <ClInclude Include="include\DrawingAlgoApp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
