extracted the teapot assignment into its own class

--- a/MSVC/3D-Stuff/3D-Stuff.vcxproj.filters
+++ b/MSVC/3D-Stuff/3D-Stuff.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="src\OpenGLApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Teapot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\OpenGLApp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Teapot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
