--- a/MSVC/3D-Stuff/3D-Stuff.vcxproj
+++ b/MSVC/3D-Stuff/3D-Stuff.vcxproj
@@ -18,7 +18,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120_CTP_Nov2012</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -101,9 +101,11 @@
   <ItemGroup>
     <ClCompile Include="src\OpenGLApp.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Teapot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\OpenGLApp.h" />
+    <ClInclude Include="include\Teapot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
