--- a/MSVC/3D-Stuff/3D-Stuff.vcxproj
+++ b/MSVC/3D-Stuff/3D-Stuff.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="src\Teapot.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\OpenGLApp.h" />
     <ClInclude Include="include\Robot.h" />
     <ClInclude Include="include\Teapot.h" />
