--- a/MSVC/3D-Stuff/3D-Stuff.vcxproj.filters
+++ b/MSVC/3D-Stuff/3D-Stuff.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="include\Robot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
