movable camera for teapot and robot as well as seperate moving parts for the robot

--- a/MSVC/3D-Stuff/3D-Stuff.vcxproj.filters
+++ b/MSVC/3D-Stuff/3D-Stuff.vcxproj.filters
@@ -38,7 +38,7 @@
     <ClInclude Include="include\Robot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\Camera.h">
+    <ClInclude Include="include\CameraInterface.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
