calculating averaged vertex normals over the normals of the triangle the vertex participates in

--- a/MSVC/3D-Stuff/3D-Stuff.vcxproj
+++ b/MSVC/3D-Stuff/3D-Stuff.vcxproj
@@ -55,7 +55,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(Projectdir)\..\..\extlib\glm;$(Projectdir)\..\..\extlib\SFML\include\;$(Projectdir)\..\SFMLApp\include\;$(Projectdir)\include\;$(Projectdir)\..\..\extlib\Freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>FREEGLUT_STATIC;_DEBUG;SFML_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>FREEGLUT_STATIC;_DEBUG;SFML_STATIC;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
